--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/vercel": "^5.2.0",
     "astro": "^3.1.2",
     "sweetalert2": "^11.7.31"
   }
